add install sections

--- a/systemd/update-vendor-firmware.service
+++ b/systemd/update-vendor-firmware.service
@@ -10,3 +10,6 @@ ConditionDirectoryNotEmpty=/boot/efi/vendorfw
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/local/sbin/update-vendor-firmware
+
+[Install]
+WantedBy=sysinit.target
