--- a/systemd/systemd-udev-trigger-early.service
+++ b/systemd/systemd-udev-trigger-early.service
@@ -10,3 +10,6 @@ ConditionPathIsReadWrite=/sys
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=-udevadm trigger --type=devices --action=add --subsystem-match=block
+
+[Install]
+WantedBy=sysinit.target
