--- a/dracut.conf.d/asahi.conf
+++ b/dracut.conf.d/asahi.conf
@@ -18,3 +18,6 @@ add_drivers+='rtc-macsmc simple-mfd-spmi spmi-apple-controller nvmem_spmi_mfd '
 
 # For MTP HID
 add_drivers+='apple-dockchannel dockchannel-hid apple-rtkit-helper '
+
+# rescue images don't work yet
+dracut_rescue_image='no'
