first tested and working version

--- a/dracut.conf.d/asahi.conf
+++ b/dracut.conf.d/asahi.conf
@@ -1,6 +1,9 @@
 # For NVMe & SMC
 add_drivers+='apple-mailbox '
 
+# For NVMe
+add_drivers+='nvme_apple '
+
 # For USB and HID
 add_drivers+='pinctrl-apple-gpio '
 
