delay the systemd-udev-trigger service
delay the systemd-udev-trigger service so the first-boot script can unpack the firmware before that services starts. 
this sorts out the issue where the wifi interface wasn't coming up on the first boot.

--- a/systemd/asahi-firstboot.service
+++ b/systemd/asahi-firstboot.service
@@ -3,7 +3,7 @@ Description=Sets up system on first boot
 DefaultDependencies=no
 Conflicts=shutdown.target
 After=systemd-remount-fs.service boot-efi.mount
-Before=first-boot-complete.target
+Before=systemd-udev-trigger.service first-boot-complete.target
 Wants=first-boot-complete.target
 ConditionPathIsReadWrite=/etc
 ConditionFirstBoot=yes
